made setup more general, added prestissimo, host.docker.internal and formatting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,16 @@ services:
         image: mysql:5.7
         container_name: klizzy_mysql
         environment:
-            MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-            MYSQL_DATABASE: ${MYSQL_DATABASE}
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_DATABASE: root
         ports:
             - 3336:3306
     php:
         image: klizzy/php-base:7.2
         container_name: klizzy_php
         environment:
-            APACHE_DOCUMENT_ROOT: ${APACHE_DOC_ROOT}
+            APACHE_DOCUMENT_ROOT: /var/www/
         volumes:
-            - ./symfony:/var/www/symfony
+            - ./www:/var/www/
         ports:
             - 8080:80
