--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
             - 8080:80
     redis:
         image: redis:6.0.8
+        container_name: klizzy_redis
         ports:
             - 6379:6379
 volumes:
-    symfony-docker-volume:
-        external: true
+    symfony-docker-volume: {}
