--- a/.editorconfig
+++ b/.editorconfig
@@ -14,15 +14,15 @@ trim_trailing_whitespace = true
 end_of_line = crlf
 
 [*.json]
-indent_size = 4
 insert_final_newline = false
+indent_style = tab
 
 [*.md]
+charset = utf-8
 trim_trailing_whitespace = false
 
 [*.txt]
 insert_final_newline = false
 
 [*.{yml,yaml,yaml.*}]
-indent_style = space
-indent_size = 4
+indent_style = tab
