improved config, docker.sh and readme

--- a/docker-compose-sync.yml
+++ b/docker-compose-sync.yml
@@ -2,7 +2,7 @@ version: "3.0"
 services:
     php:
         volumes:
-            - symfony-docker-volume:/var/www/html:nocopy
+            - symfony-docker-volume:/var/www:nocopy
 volumes:
     symfony-docker-volume:
         external: true
