--- a/docker-compose-sync.yml
+++ b/docker-compose-sync.yml
@@ -2,7 +2,7 @@ version: "3.0"
 services:
     php:
         volumes:
-            - symfony_docker_volume:/var/www:nocopy
+            - symfony-docker-volume:/var/www:nocopy
 volumes:
-    symfony_docker_volume:
+    symfony-docker-volume:
         external: true
